# qt-thread

./: CMakeLists.txt  Main.qml  README.md  main.cpp  mytask.cpp  mytask.h  taskmanager.cpp  taskmanager.h
